<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue950"
    tools:context=".feature.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_title_register"
        style="@style/TextContent.Heading.XLarge"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="84dp"
        android:textColor="@color/yellow400"
        android:text="@string/title_register"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle_register"
        style="@style/TextContent.SubHeading.Small"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/subtitle_register"
        app:layout_constraintTop_toBottomOf="@id/tv_title_register" />

    <include
        android:id="@+id/lyt_username"
        layout="@layout/layout_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle_register" />

    <include
        android:id="@+id/lyt_email"
        layout="@layout/layout_input_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/lyt_username" />

    <include
        android:id="@+id/lyt_password"
        layout="@layout/layout_input_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/lyt_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/ButtonGeneral.PrimaryVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/label_register"
        app:layout_constraintTop_toBottomOf="@id/lyt_password" />

    <TextView
        android:id="@+id/tv_label_already_have_account_register"
        style="@style/TextContent.Label.XSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_already_have_an_account_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/Neutral1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>